# robotic-hand-with-eeg-and-machine-learning

./: CMakeLists.txt  firmware.ino  main.cpp
den/: GEMINI.md  deneme.py  main.py  pc_control_template.cpp  requirements.txt
den/robot_arm_eeg/: robot_arm_eeg.ino
